--- a/Uleadz.StaticWeb/Pages/Shared/_AboutUs.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_AboutUs.cshtml
@@ -23,10 +23,12 @@
                         leads are allocated in a highly efficient way, prioritizing professionals<br />within the organization
                         according to geographic area and work type.
                     </p>
-                    <div class="frame-17">
-                        <div class="start-now valign-text-middle poppins-semi-bold-white-16px">Start Now</div>
-                    </div>
-                </div>
+                    <a href="#">
+                        <div class="frame-17">
+                            <div class="start-now valign-text-middle poppins-semi-bold-white-16px">Start Now</div>
+                        </div>
+                    </a>
+                        </div>
                 <div class="ellipse-37"></div>
                 <div class="ellipse-41"></div>
                 <div class="ellipse-38"></div>
@@ -43,7 +45,8 @@
         </div>
     </div>
     <div class="group-624">
-        <img class="arrow-right" src="~/lib/img/arrow-right-6@2x.svg" />
+        <a href="#" class="prev"><img class="arrow-right" src="~/lib/img/arrow-right-6@2x.svg"></a>
+        @*<img class="arrow-right" src="~/lib/img/arrow-right-6@2x.svg" />*@
         <div class="flex-col">
             <div class="flex-row-1">
                 <div class="flex-col-1">
@@ -61,21 +64,22 @@
                     <img class="rectangle-260" src="~/lib/img/rectangle-260-1@2x.png" />
                 </div>
             </div>
-            <div class="group-622">
-                <div class="overlap-group1">
-                    <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
+            <div class="group-622 side-2">
+
+                <div class="overlap-group1 pagination">
+                    <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px ">
                         &#34;If you are looking to save time and be more organized with your business, this is what you are
                         looking for. Awesome system, very time saving and user friendly! Great to keep your business
                         organized!&#34;
                     </div>
-                    <div class="overlap-group-2">
+                    <div class="overlap-group-2 ">
                         <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
                         <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
                             Home Service Professional
                         </div>
                     </div>
                 </div>
-                <div class="overlap-group2">
+                <div class="overlap-group2 pagination">
                     <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
                         &#34;If you are looking to save time and be more organized with your business, this is what you are
                         looking for. Awesome system, very time saving and user friendly! Great to keep your business
@@ -86,9 +90,38 @@
                         <div class="field-technician valign-text-middle poppins-normal-black-14px">Field Technician</div>
                     </div>
                 </div>
+
+                @*copy*@
+
+                <div class="overlap-group1 pagination">
+                    <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px ">
+                        &#34;copy If you are looking to save time and be more organized with your business, this is what you are
+                        looking for. Awesome system, very time saving and user friendly! Great to keep your business
+                        organized!&#34;
+                    </div>
+                    <div class="overlap-group-2 ">
+                        <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
+                        <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
+                            Home Service Professional
+                        </div>
+                    </div>
+                </div>
+                <div class="overlap-group2 pagination">
+                    <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
+                        &#34; copy If you are looking to save time and be more organized with your business, this is what you are
+                        looking for. Awesome system, very time saving and user friendly! Great to keep your business
+                        organized!&#34;
+                    </div>
+                    <div class="overlap-group-3">
+                        <div class="name valign-text-middle poppins-medium-black-16px">Josh Garcia</div>
+                        <div class="field-technician valign-text-middle poppins-normal-black-14px">Field Technician</div>
+                    </div>
+                </div>
+
             </div>
         </div>
-        <img class="arrow-right-1" src="~/lib/img/arrow-right-5@2x.svg" />
+        <a href="#" class="next"><img class="arrow-right-1" src="~/lib/img/arrow-right-5@2x.svg"></a>
+        @*<img class="arrow-right-1" src="~/lib/img/arrow-right-5@2x.svg" />*@
     </div>
 
 </div>
