--- a/Uleadz.StaticWeb/Pages/Shared/_AboutUsMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_AboutUsMobile.cshtml
@@ -12,10 +12,15 @@
             carpet cleaners, garage door repairers,<br />exterminators, gardeners, etc.)
         </p>
         <div class="group-1802">
-            <div class="frame-4"><div class="start-today poppins-normal-white-14px">Start today</div></div>
-            <div class="frame-5 border-1px-black">
-                <div class="how-it-works poppins-normal-black-14px">How it works</div>
-            </div>
+            <a href="#">
+                <div class="frame-4"><div class="start-today poppins-normal-white-14px">Start today</div></div>
+            </a>
+           
+            <a href="#">
+                <div class="frame-5 border-1px-black">
+                    <div class="how-it-works poppins-normal-black-14px">How it works</div>
+                </div>
+                </a>
         </div>
         <div class="overlap-group5">
             <div class="rectangle-304"></div>
@@ -43,7 +48,10 @@
                 <div class="ellipse-39"></div>
                 <div class="ellipse-40"></div>
             </div>
-            <div class="frame-4-1"><div class="start-now poppins-normal-white-14px">Start now</div></div>
+           
+            <a href="#">
+                <div class="frame-4-1"><div class="start-now poppins-normal-white-14px">Start now</div></div>
+                </a>
         </div>
         <div class="overlap-group6">
             <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
@@ -87,9 +95,12 @@
                     </div>
                 </div>
             </div>
-            <div class="frame-5-1 border-1px-brilliant-rose">
-                <div class="view-all poppins-normal-brilliant-rose-14px">View all</div>
-            </div>
+         
+            <a href="#">
+                <div class="frame-5-1 border-1px-brilliant-rose">
+                    <div class="view-all poppins-normal-brilliant-rose-14px">View all</div>
+                </div>
+                </a>
         </div>
 
     </div>
