--- a/Uleadz.StaticWeb/Pages/Shared/_Contact.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_Contact.cshtml
@@ -33,9 +33,11 @@
                             <input placeholder="Tell us about your project" type="text" class="your poppins-normal-fuscous-gray-22px" />
                             <img class="line-63" src="~/lib/img/line-63@1x.svg" />
                         </div>
-                        <div class="frame-17">
-                            <div class="schedule-demo valign-text-middle poppins-semi-bold-white-16px">Schedule Demo</div>
-                        </div>
+                        <a href="#">
+                            <div class="frame-17">
+                                <div class="schedule-demo valign-text-middle poppins-semi-bold-white-16px">Schedule Demo</div>
+                            </div>
+                        </a>
                     </div>
                     @*<div class="overlap-group">
                         <div class="enter-your-details poppins-medium-brilliant-rose-20px">
@@ -143,9 +145,11 @@
             </div>
         </div>
         <div class="so-what-are-you-waiting-for poppins-medium-black-50px">So, what are you waiting for?</div>
-        <div class="frame-17-1">
-            <div class="book-your-demo-now valign-text-middle poppins-semi-bold-white-16px">Book Your Demo Now</div>
-        </div>
+        <a href="#">
+            <div class="frame-17-1">
+                <div class="book-your-demo-now valign-text-middle poppins-semi-bold-white-16px">Book Your Demo Now</div>
+            </div>
+            </a>
 
     </div>
 </div>
