--- a/Uleadz.StaticWeb/Pages/Shared/_FooterMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_FooterMobile.cshtml
@@ -14,27 +14,33 @@
                     <div class="group-container poppins-normal-white-16px">
                         <div class="group-486">
                             <a href="/index">
-                                <div class="place-link valign-text-middle">Home</div>
+                                <div class="place-link valign-text-middle white">Home</div>
                             </a>
                             <a href="/why-uleadz">
-                                <div class="why-uleadz-link valign-text-middle">Why Uleadz?</div>
+                                <div class="why-uleadz-link valign-text-middle white">Why Uleadz?</div>
                             </a>
                             <a href="/about-us">
-                                <div class="about-us-link valign-text-middle">About Us</div>
+                                <div class="about-us-link valign-text-middle white">About Us</div>
                             </a>
                             <a href="/contact">
-                                <div class="place-1-link valign-text-middle">Contact</div>
+                                <div class="place-1-link valign-text-middle white">Contact</div>
                             </a>
                             <a href="/pricing">
-                                <div class="pricing-link  valign-text-middle">Pricing</div>
+                                <div class="pricing-link  valign-text-middle white">Pricing</div>
                             </a>
                         </div>
                         <div class="group-485">
-                            <div class="industries valign-text-middle">Industries</div>
-                            <div class="terms-of-use valign-text-middle">Terms of use</div>
-                            <div class="privacy-policy valign-text-middle">Privacy Policy</div>
-                            <a href="/help-documentation">
-                                <div class="support valign-text-middle">Support</div>
+                            <a href="">
+                                <div class="industries valign-text-middle white">Industries</div>
+                            </a>
+                            <a href="">
+                                <div class="terms-of-use valign-text-middle white">Terms of use</div>
+                            </a>
+                            <a href="">
+                                <div class="privacy-policy valign-text-middle white">Privacy Policy</div>
+                                </a>
+                                <a href="/help-documentation">
+                                    <div class="support valign-text-middle white">Support</div>
                                 </a>
                         </div>
                     </div>
