--- a/Uleadz.StaticWeb/Pages/Shared/_HelpDocumentation.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_HelpDocumentation.cshtml
@@ -4,19 +4,19 @@
             @*<img class="image-1" src="~/lib/img/image-1-4@2x.png" />*@
             <div class="overlap-group5">
                 @*<div class="menu poppins-medium-hunter-green-16px">
-                        <div class="place">Home</div>
-                        <div class="why-uleadz">Why Uleadz</div>
-                        <div class="overlap-group-1 poppins-medium-hunter-green-16px">
-                            <div class="pricing">Pricing</div>
-                            <div class="place-1">Contact</div>
-                            <div class="about-us">About Us</div>
-                            <div class="help">Help</div>
-                            <div class="group-584">
-                                <div class="industries poppins-medium-hunter-green-16px">Industries</div>
-                                <img class="line-42" src="~/lib/img/line-42-2@2x.svg" />
-                            </div>
+                    <div class="place">Home</div>
+                    <div class="why-uleadz">Why Uleadz</div>
+                    <div class="overlap-group-1 poppins-medium-hunter-green-16px">
+                        <div class="pricing">Pricing</div>
+                        <div class="place-1">Contact</div>
+                        <div class="about-us">About Us</div>
+                        <div class="help">Help</div>
+                        <div class="group-584">
+                            <div class="industries poppins-medium-hunter-green-16px">Industries</div>
+                            <img class="line-42" src="~/lib/img/line-42-2@2x.svg" />
                         </div>
-                    </div>*@
+                    </div>
+                </div>*@
                 <img class="book-4" src="~/lib/img/book-4-2@2x.png" />
                 <img class="x1207_vw50a-x-rs-zw-qt-mg-1" src="~/lib/img/1207-vw50axrszwqtmg-1-1@1x.png" />
                 <div class="rectangle-226"></div>
@@ -28,9 +28,11 @@
                     </p>*@
                     <div class="rectangle-copy-15"></div>
                     <img class="search" src="~/lib/img/search@2x.svg" />
-                    <div class="frame-17">
-                        <div class="search-1 valign-text-middle poppins-medium-white-16px">Search</div>
-                    </div>
+                    <a href="#">
+                        <div class="frame-17">
+                            <div class="search-1 valign-text-middle poppins-medium-white-16px">Search</div>
+                        </div>
+                    </a>
                 </div>
                 <div class="group-575">
                     <div class="overlap-group"><img class="new-1" src="~/lib/img/new-1@2x.png" /></div>
@@ -94,44 +96,48 @@
             <div class="ap-is-and-more">API’s and more</div>
             <div class="connecting-multiple-accounts">Connecting multiple accounts</div>
         </div>
-        <div class="frame-17-1 border-1px-brilliant-rose">
-            <div class="show-all-featured-content valign-text-middle">Show all featured content</div>
-        </div>
-        <div class="overlap-group-container">
-            <div class="overlap-group2">
-                <div class="didnt-find-what-you poppins-medium-black-40px">
-                    Didn’t find what you need? We are here to help
-                </div>
-                <div class="overlap-group-4">
-                    <div class="enter-your-details poppins-medium-brilliant-rose-20px">
-                        Enter your details, we’ll get back to you ASAP
-                    </div>
-                    <div class="group-630">
-                        <input type="text" placeholder="Your Name" class="your-name poppins-normal-fuscous-gray-22px" />
-                        @*<div class="your-name poppins-normal-fuscous-gray-22px">Your Name</div>*@
-                        <img class="line-63" src="~/lib/img/line-63@1x.svg" />
-                    </div>
-                    <div class="group-63">
-                        <input type="email" placeholder="Your Email" class="your-email poppins-normal-fuscous-gray-22px" />
-                        @*<div class="your-email poppins-normal-fuscous-gray-22px">Your Email</div>*@
-                        <img class="line-63" src="~/lib/img/line-63@1x.svg" />
-                    </div>
-                    <div class="group-63">
-                        <input type="text" placeholder="Your Company" class="your-company poppins-normal-fuscous-gray-22px" />
-                        @*<div class="your-company poppins-normal-fuscous-gray-22px">Your Company</div>*@
-                        <img class="line-63" src="~/lib/img/line-63@1x.svg" />
-                    </div>
-                    <div class="group-63">
-                        <input type="text" placeholder="Tell us how we can help" class="tell-us-how-we-can-help poppins-normal-fuscous-gray-22px" />
-                        @*<div class="tell-us-how-we-can-help poppins-normal-fuscous-gray-22px">Tell us how we can help</div>*@
-                        <img class="line-63" src="~/lib/img/line-63@1x.svg" />
-                    </div>
-                    <div class="frame-17-2">
-                        <div class="place-2 valign-text-middle poppins-semi-bold-white-16px">Send</div>
-                    </div>
-                </div>
+        <a href="#">
+            <div class="frame-17-1 border-1px-brilliant-rose">
+                <div class="show-all-featured-content valign-text-middle">Show all featured content</div>
             </div>
-            @*<div class="overlap-group4 poppins-normal-white-16px">
+            </a>
+            <div class="overlap-group-container">
+                <div class="overlap-group2">
+                    <div class="didnt-find-what-you poppins-medium-black-40px">
+                        Didn’t find what you need? We are here to help
+                    </div>
+                    <div class="overlap-group-4">
+                        <div class="enter-your-details poppins-medium-brilliant-rose-20px">
+                            Enter your details, we’ll get back to you ASAP
+                        </div>
+                        <div class="group-630">
+                            <input type="text" placeholder="Your Name" class="your-name poppins-normal-fuscous-gray-22px" />
+                            @*<div class="your-name poppins-normal-fuscous-gray-22px">Your Name</div>*@
+                            <img class="line-63" src="~/lib/img/line-63@1x.svg" />
+                        </div>
+                        <div class="group-63">
+                            <input type="email" placeholder="Your Email" class="your-email poppins-normal-fuscous-gray-22px" />
+                            @*<div class="your-email poppins-normal-fuscous-gray-22px">Your Email</div>*@
+                            <img class="line-63" src="~/lib/img/line-63@1x.svg" />
+                        </div>
+                        <div class="group-63">
+                            <input type="text" placeholder="Your Company" class="your-company poppins-normal-fuscous-gray-22px" />
+                            @*<div class="your-company poppins-normal-fuscous-gray-22px">Your Company</div>*@
+                            <img class="line-63" src="~/lib/img/line-63@1x.svg" />
+                        </div>
+                        <div class="group-63">
+                            <input type="text" placeholder="Tell us how we can help" class="tell-us-how-we-can-help poppins-normal-fuscous-gray-22px" />
+                            @*<div class="tell-us-how-we-can-help poppins-normal-fuscous-gray-22px">Tell us how we can help</div>*@
+                            <img class="line-63" src="~/lib/img/line-63@1x.svg" />
+                        </div>
+                        <a href="#">
+                            <div class="frame-17-2">
+                                <div class="place-2 valign-text-middle poppins-semi-bold-white-16px">Send</div>
+                            </div>
+                            </a>
+                    </div>
+                </div>
+                @*<div class="overlap-group4 poppins-normal-white-16px">
                     <img class="rectangle-170" src="~/lib/img/rectangle-170@1x.svg" />
                     <img class="line-41" src="~/lib/img/line-41@1x.svg" />
                     <div class="group-484">
@@ -169,6 +175,6 @@
                     </div>
                     <img class="uleadz1-1" src="~/lib/img/uleadz1-1@2x.png" />
                 </div>*@
-        </div>
+            </div>
     </div>
 </div>
