--- a/Uleadz.StaticWeb/Pages/Shared/_HelpDocumentationMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_HelpDocumentationMobile.cshtml
@@ -89,12 +89,14 @@
         <div class="employee-sign-in poppins-medium-royal-blue-20px">Employee sign in</div>
         <div class="connecting-multiple-accounts poppins-medium-royal-blue-20px">Connecting multiple accounts</div>
         <div class="frame-container">
-            <div class="frame border-1px-brilliant-rose">
+            <a href="#">
+                <div class="frame border-1px-brilliant-rose">
+                    <div class="show-all-featured-content poppins-normal-brilliant-rose-14px">Show all featured content</div>
+                </div>
+                </a>
+                @*<div class="frame border-1px-brilliant-rose">
                 <div class="show-all-featured-content poppins-normal-brilliant-rose-14px">Show all featured content</div>
-            </div>
-            <div class="frame border-1px-brilliant-rose">
-                <div class="show-all-featured-content poppins-normal-brilliant-rose-14px">Show all featured content</div>
-            </div>
+            </div>*@
         </div>
         <div class="group-container-1">
             <img class="group-1764" src="~/lib/img/group-1764@2x.png" />
