--- a/Uleadz.StaticWeb/Pages/Shared/_HomePage.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_HomePage.cshtml
@@ -49,7 +49,9 @@
                                         Easily manage hundreds of jobs at a time <br />and set them up to make a profit.
                                     </p>
                                 </div>
-                                <div class="frame-4"><div class="browse-more poppins-normal-white-16px">Browse More</div></div>
+                                <a href="#">
+                                    <div class="frame-4"><div class="browse-more poppins-normal-white-16px">Browse More</div></div>
+                                </a>
                             </div>
                             <div class="overlap-group2">
                                 <img class="graphic_1-1-3" src="~/lib/img/graphic-1-1-3@2x.png" />
@@ -64,22 +66,8 @@
                     <img class="graphic_1-1-2" src="~/lib/img/graphic-1-1-2@2x.png" />
                 </div>
             </div>
-            @*<div class="menu poppins-medium-hunter-green-16px" >
-                    <div class="overlap-group6">
-                        <div class="place">Home</div>
-                        <div class="why-uleadz">Why Uleadz</div>
-                        <div class="group-584">
-                            <img class="line-42" src="~/lib/img/line-42-2@2x.svg" />
-                            <div class="industries poppins-medium-hunter-green-16px">Industries</div>
-                        </div>
-                    </div>
-                    <div class="about-us">About Us</div>
-                    <div class="pricing">Pricing</div>
-                    <div class="place-1">Contact</div>
-                    <div class="help">Help</div>
-                </div>*@
+      
         </div>
-        @*<img class="image-1" src="~/lib/img/image-1@2x.png" />*@
     </div>
     <div class="group-519">
         <div class="overlap-group1-1">
@@ -119,9 +107,11 @@
                 <div class="group-282-2"><img class="friends" src="~/lib/img/friends-2@2x.svg" /></div>
                 <div class="automate-customer-reminders poppins-normal-black-16px"><br />Automate customer reminders</div>
             </div>
-            <div class="frame-16">
-                <div class="learn-more valign-text-middle poppins-medium-white-16px">Learn More</div>
-            </div>
+            <a href="#">
+                <div class="frame-16">
+                    <div class="learn-more valign-text-middle poppins-medium-white-16px">Learn More</div>
+                </div>
+            </a>
         </div>
     </div>
     <div class="group-517">
@@ -191,9 +181,11 @@
                 new sense of liberation. We provide you with all<br />the useful resources that can help you to automate
                 your<br />business workflows and optimize your workforce
             </p>
-            <div class="frame-16-1">
-                <div class="learn-more-1 valign-text-middle poppins-medium-white-16px">Learn More</div>
-            </div>
+            <a href="#">
+                <div class="frame-16-1">
+                    <div class="learn-more-1 valign-text-middle poppins-medium-white-16px">Learn More</div>
+                </div>
+                </a>
         </div>
         <div class="overlap-group-4">
             <img class="ellipse-25" src="~/lib/img/ellipse-25@1x.svg" />
