--- a/Uleadz.StaticWeb/Pages/Shared/_HomePageMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_HomePageMobile.cshtml
@@ -68,8 +68,10 @@
                         invoices and make sure<br />you collect the money you’re owed.
                     </p>
                 </div>
-                <div class="frame-4"><div class="browse-more poppins-normal-white-14px">Browse More</div></div>
-            </div>
+                <a href="#">
+                    <div class="frame-4"><div class="browse-more poppins-normal-white-14px">Browse More</div></div>
+                    </a>
+                    </div>
         </div>
         <div class="group-1740">
             <img class="internet" src="~/lib/img/internet-7@2x.png" />
@@ -105,9 +107,11 @@
                 <div class="group-282-2"><img class="friends" src="~/lib/img/friends-11@2x.png" /></div>
                 <span class="automate-customer-reminders poppins-normal-black-14px">Automate customer reminders</span>
             </div>
-            <div class="frame-16">
-                <div class="learn-more valign-text-middle poppins-medium-white-10px">Learn More</div>
-            </div>
+            <a href="#">
+                <div class="frame-16">
+                    <div class="learn-more valign-text-middle poppins-medium-white-10px">Learn More</div>
+                </div>
+                </a>
         </div>
         <div class="group-1747">
             <div class="group-1746">
@@ -177,43 +181,12 @@
                 sense of liberation. We provide<br />you with all the useful resources that can help<br />you to automate
                 your business workflows and<br />optimize your workforce.
             </p>
-            <div class="frame-16-1">
-                <div class="learn-more valign-text-middle poppins-medium-white-10px">Learn More</div>
-            </div>
+            <a href="#">
+                <div class="frame-16-1">
+                    <div class="learn-more valign-text-middle poppins-medium-white-10px">Learn More</div>
+                </div>
+                </a>
         </div>
-        @*<div class="group-1764">
-            <div class="overlap-group7">
-                <div class="stay-ahead-of-the-ga poppins-normal-white-20px">
-                    <span class="poppins-normal-white-20px">Stay ahead of the game<br />with</span>
-                    <span class="span1 poppins-medium-white-28px">Uleadz Field<br />Management Software</span>
-                </div>
-                <div class="frame-16-2">
-                    <div class="contact-us valign-text-middle poppins-medium-white-18px">Contact Us</div>
-                </div>
-                <div class="group-container poppins-normal-white-16px">
-                    <div class="group-486">
-                        <div class="place valign-text-middle">Home</div>
-                        <div class="why-uleadz valign-text-middle">Why Uleadz?</div>
-                        <div class="about-us valign-text-middle">About Us</div>
-                        <div class="place-1 valign-text-middle">Contact</div>
-                        <div class="pricing valign-text-middle">Pricing</div>
-                    </div>
-                    <div class="group-485">
-                        <div class="industries valign-text-middle">Industries</div>
-                        <div class="terms-of-use valign-text-middle">Terms of use</div>
-                        <div class="privacy-policy valign-text-middle">Privacy Policy</div>
-                        <div class="support valign-text-middle">Support</div>
-                    </div>
-                </div>
-                <div class="group-144">
-                    <div class="group-1759"><img class="group-143" src="~/lib/img/group-143-2@2x.png" /></div>
-                    <div class="group-1758"><img class="group" src="~/lib/img/group-16@2x.png" /></div>
-                    <div class="group-1757"><img class="vector-1" src="~/lib/img/vector@2x.png" /></div>
-                    <div class="group-1756-1"><img class="group-1755" src="~/lib/img/group-1755@2x.png" /></div>
-                </div>
-                <div class="hellouleadzcom valign-text-middle poppins-normal-white-16px">hello@uleadz.com</div>
-                <img class="uleadz1-1" src="~/lib/img/uleadz1-1-2@2x.png" />
-            </div>
-        </div>*@
+       
     </div>
     </div>
