--- a/Uleadz.StaticWeb/Pages/Shared/_Menu.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_Menu.cshtml
@@ -1,26 +1,37 @@
-﻿<header class="nav">
-    <div class="menu-nav poppins-medium-hunter-green-16px">
-        <a href="/index"><div class="link">Home</div></a>
-        <a href="/why-uleadz">
-            <div class="link">Why Uleadz</div>
+﻿<header  class="nav">
+    <div class="menu-nav poppins-medium-hunter-green-16px" id="myDIV" >
+  @* <span class="la">1</span>
+  <span class="la active">2</span>
+  <span class="la">3</span>
+  <span class="la">4</span>
+  <span class="la">5</span> *@
+
+
+        <a href="/index"  ><div class="link la " > Home</div></a>
+        <a href="/why-uleadz" >
+            <div class="link la"  >Why Uleadz</div>
         </a>
-        <a href="/industries-locksmith">
-            <div class="link">Industries</div>
+        <a href="/industries-locksmith" >
+            <div class="link la">Industries</div>
         </a>
         <a href="/about-us">
-            <div class="link">
+            <div class="link la">
                 About Us
             </div>
         </a>
         <a href="/pricing">
-            <div class="link">Pricing</div>
+            <div class="link la">Pricing</div>
         </a>
         <a href="/contact">
-            <div class="link">Contact</div>
+            <div class="link la">Contact</div>
         </a>
         <a href="/help-documentation">
-            <div class="link">Help</div>
+            <div class="link la">Help</div>
         </a>
     </div>
     <img class="image-1" src="~/lib/img/image-1@2x.png" />
 </header>
+
+</div>
+
+  
