--- a/Uleadz.StaticWeb/Pages/Shared/_Pricing.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_Pricing.cshtml
@@ -38,10 +38,13 @@
                                 <div class="address-1">1 dedicated line</div>
                             </div>
                         </div>
-                        <div class="frame-18">
-                            <div class="choose-plan poppins-normal-white-16px">Choose Plan</div>
-                            <img class="arrow-right-1" src="~/lib/img/arrow-right@2x.svg" />
-                        </div>
+                        <a href="#">
+                            <div class="frame-18">
+                                <div class="choose-plan poppins-normal-white-16px">Choose Plan</div>
+                                <img class="arrow-right" src="~/lib/img/arrow-right@2x.png" />
+                                @*<img class="arrow-right-1" src="~/lib/img/arrow-right@2x.svg" />*@
+                            </div>
+                            </a>
                     </div>
                     <div class="overlap-group1">
                         <div class="flex-row-2">
@@ -79,10 +82,13 @@
                                 <div class="x247-live-support">24/7 live support</div>
                             </div>
                         </div>
-                        <div class="frame-2">
-                            <div class="choose-plan poppins-normal-white-16px">Choose Plan</div>
-                            <img class="arrow-right" src="~/lib/img/arrow-right@2x.png" />
-                        </div>
+                      
+                        <a href="#">
+                            <div class="frame-2">
+                                <div class="choose-plan poppins-normal-white-16px">Choose Plan</div>
+                                <img class="arrow-right" src="~/lib/img/arrow-right@2x.png" />
+                            </div>
+                            </a>
                     </div>
                     <div class="overlap-group3">
                         <div class="place-2 poppins-medium-white-22px">Standard</div>
@@ -115,10 +121,12 @@
                                 <div class="flex-col-item">24/7 live support</div>
                             </div>
                         </div>
-                        <div class="frame-19">
-                            <div class="choose-plan-1">Choose Plan</div>
-                            <img class="arrow-right-2" src="~/lib/img/arrow-right-2@2x.png" />
-                        </div>
+                        <a href="#">
+                            <div class="frame-19">
+                                <div class="choose-plan-1">Choose Plan</div>
+                                <img class="arrow-right-2" src="~/lib/img/arrow-right-2@2x.png" />
+                            </div>
+                            </a>
                     </div>
                 </div>
                 <div class="overlap-group2">
@@ -157,10 +165,12 @@
                             <div class="x247-live-support-1">24/7 live support</div>
                         </div>
                     </div>
-                    <div class="frame-2">
-                        <div class="choose-plan poppins-normal-white-16px">Choose Plan</div>
-                        <img class="arrow-right" src="~/lib/img/arrow-right@2x.png" />
-                    </div>
+                    <a href="#">
+                        <div class="frame-2">
+                            <div class="choose-plan poppins-normal-white-16px">Choose Plan</div>
+                            <img class="arrow-right" src="~/lib/img/arrow-right@2x.png" />
+                        </div>
+                        </a>
                 </div>
             </div>
             <div class="frame-22"><div class="popular">Popular</div></div>
@@ -168,7 +178,8 @@
         </div>
         <div class="group-624">
             <div class="group-623">
-                <img class="arrow-right-3" src="~/lib/img/arrow-right-4@2x.png" />
+                <a href="#" class="prev"><img class="arrow-right-3" src="~/lib/img/arrow-right-4@2x.png" /></a>
+                @*<img class="arrow-right-3" src="~/lib/img/arrow-right-4@2x.png" />*@
                 <div class="flex-col-6">
                     <div class="flex-row-4">
                         <div class="flex-col-7">
@@ -186,8 +197,8 @@
                             <img class="rectangle-260" src="~/lib/img/rectangle-260-1@2x.png" />
                         </div>
                     </div>
-                    <div class="group-622">
-                        <div class="group-621">
+                    <div class="group-622 side-2">
+                        <div class="group-621 pagination">
                             <div class="overlap-group">
                                 <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
                                     &#34;If you are looking to save time and be more organized with your business, this is what you
@@ -206,7 +217,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="group-620">
+                        <div class="group-620 pagination">
                             <div class="overlap-group">
                                 <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
                                     &#34;If you are looking to save time and be more organized with your business, this is what you
@@ -225,9 +236,49 @@
                                 </div>
                             </div>
                         </div>
+                        @*copy*@
+                        <div class="group-621 pagination">
+                            <div class="overlap-group">
+                                <div class="  if-you-are-looking valign-text-middle poppins-normal-black-18px">
+                                    &#34; copy If you are looking to save time and be more organized with your business, this is what you
+                                    are looking for. Awesome system, very time saving and user friendly! Great to keep your business
+                                    organized!&#34;
+                                </div>
+                                <div class="group-618">
+                                    <div class="group-617">
+                                        <div class="overlap-group-3">
+                                            <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
+                                            <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
+                                                Home Service Professional
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="group-620 pagination">
+                            <div class="overlap-group">
+                                <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
+                                    &#34; copy If you are looking to save time and be more organized with your business, this is what you
+                                    are looking for. Awesome system, very time saving and user friendly! Great to keep your business
+                                    organized!&#34;
+                                </div>
+                                <div class="group-619">
+                                    <div class="group-617-1">
+                                        <div class="overlap-group-4">
+                                            <div class="name valign-text-middle poppins-medium-black-16px">Josh Garcia</div>
+                                            <div class="field-technician valign-text-middle poppins-normal-black-14px">
+                                                Field Technician
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <img class="arrow-right-4" src="~/lib/img/arrow-right-3@2x.png" />
+                <a href="#" class="next"><img class="arrow-right-4" src="~/lib/img/arrow-right-3@2x.png" /></a>
+                @*<img class="arrow-right-4" src="~/lib/img/arrow-right-3@2x.png" />*@
             </div>
         </div>
         <div class="overlap-group8">
@@ -274,9 +325,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="frame-17">
-                    <div class="book-a-demo valign-text-middle poppins-semi-bold-white-16px">Book a Demo</div>
-                </div>
+                <a href="#">
+                    <div class="frame-17">
+                        <div class="book-a-demo valign-text-middle poppins-semi-bold-white-16px">Book a Demo</div>
+                    </div>
+                    </a>
             </div>
         </div>
    
