--- a/Uleadz.StaticWeb/Pages/Shared/_PricingMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_PricingMobile.cshtml
@@ -40,10 +40,12 @@
                             <div class="address">1 dedicated line</div>
                         </div>
                     </div>
-                    <div class="frame-18">
-                        <div class="choose-plan-1 poppins-normal-white-14px">Choose Plan</div>
-                        <img class="arrow-right" src="~/lib/img/arrow-right-5@2x.png" />
-                    </div>
+                    <a href="#">
+                        <div class="frame-18">
+                            <div class="choose-plan-1 poppins-normal-white-14px">Choose Plan</div>
+                            <img class="arrow-right" src="~/lib/img/arrow-right-5@2x.png" />
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="group-182">
@@ -83,10 +85,13 @@
                             <div class="x247-live-support">24/7 live support</div>
                         </div>
                     </div>
-                    <div class="frame-18-1">
-                        <div class="choose-plan-2 poppins-normal-white-14-2px">Choose Plan</div>
-                        <img class="arrow-right-1" src="~/lib/img/arrow-right-1@2x.svg" />
-                    </div>
+                    <a href="#">
+                        <div class="frame-18-1">
+                            <div class="choose-plan-2 poppins-normal-white-14-2px">Choose Plan</div>
+                            <img class="arrow-right" src="~/lib/img/arrow-right-15@2x.png" />
+                            @*<img class="arrow-right-1" src="~/lib/img/arrow-right-1@2x.svg" />*@
+                        </div>
+                        </a>
                 </div>
             </div>
             <div class="group-182">
@@ -126,10 +131,12 @@
                             <div class="x247-live-support-1">24/7 live support</div>
                         </div>
                     </div>
-                    <div class="frame-2">
-                        <div class="choose-plan poppins-normal-white-14-2px">Choose Plan</div>
-                        <img class="arrow-right" src="~/lib/img/arrow-right-15@2x.png" />
-                    </div>
+                    <a href="#">
+                        <div class="frame-2">
+                            <div class="choose-plan poppins-normal-white-14-2px">Choose Plan</div>
+                            <img class="arrow-right" src="~/lib/img/arrow-right-15@2x.png" />
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="group-182">
@@ -169,10 +176,12 @@
                             <div class="x247-live-support-2">24/7 live support</div>
                         </div>
                     </div>
-                    <div class="frame-2">
-                        <div class="choose-plan poppins-normal-white-14-2px">Choose Plan</div>
-                        <img class="arrow-right" src="~/lib/img/arrow-right-15@2x.png" />
-                    </div>
+                    <a href="#">
+                        <div class="frame-2">
+                            <div class="choose-plan poppins-normal-white-14-2px">Choose Plan</div>
+                            <img class="arrow-right" src="~/lib/img/arrow-right-15@2x.png" />
+                        </div>
+                        </a>
                 </div>
             </div>
         </div>
@@ -219,9 +228,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="frame-5 border-1px-brilliant-rose">
-                    <div class="view-all poppins-normal-brilliant-rose-14px">View all</div>
-                </div>
+                <a href="#">
+                    <div class="frame-5 border-1px-brilliant-rose">
+                        <div class="view-all poppins-normal-brilliant-rose-14px">View all</div>
+                    </div>
+                    </a>
             </div>
             <div class="overlap-group6">
                 <div class="we-have-defined-a-co poppins-medium-hunter-green-28px">
@@ -266,7 +277,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="frame-4"><div class="book-a-demo poppins-normal-white-14px">Book a Demo</div></div>
+                <a href="#">
+                    <div class="frame-4"><div class="book-a-demo poppins-normal-white-14px">Book a Demo</div></div>
+                    </a>
             </div>
             @*<div class="overlap-group5">
                 <div class="stay-ahead-of-the-ga poppins-normal-white-20px">
