--- a/Uleadz.StaticWeb/Pages/Shared/_WhyUleadz.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_WhyUleadz.cshtml
@@ -29,51 +29,96 @@
                     <img class="book-4" src="~/lib/img/book-4@2x.png" />
                 </div>
             </div>
-            <div class="frame-16">
-                <div class="start-today valign-text-middle poppins-medium-white-16px">Start Today</div>
-            </div>
-        </div>
-        <div class="group-573">
-            <div class="group-525">
-                <div class="packed-with-features poppins-medium-black-42px">
-                    Packed With Features For Your Home<br />Service Business
+            <a href="#">
+                <div class="frame-16">
+                    <div class="start-today valign-text-middle poppins-medium-white-16px">Start Today</div>
+
                 </div>
-                <div class="frame-17">
-                    <div class="overlap-group-1">
-                        <img class="purse-1" src="~/lib/img/purse-1@2x.png" />
-                        <div class="job-profitability poppins-medium-black-34px">Job Profitability</div>
-                        <div class="estimates-invoices poppins-normal-black-18px">
-                            Estimates &amp; Invoices<br />Contracts &amp; Signatures<br />Customer Management<br />Email &amp; SMS
-                            Communications
-                        </div>
-                    </div>
-                    <div class="overlap-group1-1">
-                        <img class="purse-2" src="~/lib/img/purse-2@2x.png" />
-                        <div class="customer-management poppins-medium-black-34px">Customer<br />Management</div>
-                        <div class="scheduling-dispatc poppins-normal-black-18px">
-                            Scheduling &amp; Dispatch<br />Route Planning<br />Job Profitability<br />Mobile &amp; Email
-                            Payments<br />Square Integration
-                        </div>
-                    </div>
-                    <div class="overlap-group2-1">
-                        <img class="purse-3" src="~/lib/img/purse-3@2x.png" />
-                        <div class="online-booking poppins-medium-black-34px">Online Booking</div>
-                        <div class="file-photo-attachmen poppins-normal-black-18px">
-                            File/Photo Attachments<br />Online Booking<br />Notifications &amp; Reminders<br />Custom Forms &amp;
-                            Fields
-                        </div>
-                    </div>
-                    <div class="overlap-group3-1">
-                        <img class="purse-3-1" src="~/lib/img/purse-3-1@2x.png" />
-                        <div class="online-booking-1 poppins-medium-black-34px">Online Booking</div>
-                        <div class="cloud-storage-i-os-a poppins-normal-black-18px">
-                            Cloud storage<br />iOS, Android, and web<br />QuickBooks &amp; Xero Sync<br />…and more!
-                        </div>
+            </a>
+        </div>
+
+        @*<div class="img-list">
+            <img src="https://robohash.org/1.png"  alt="1" />
+            <img src="https://robohash.org/2.png"  alt="2" />
+            <img src="https://robohash.org/3.png"  alt="3" />
+            <img src="https://robohash.org/4.png"  alt="4" />
+            <img src="https://robohash.org/5.png"  alt="5" />
+            <img src="https://robohash.org/6.png"  alt="6" />
+            <img src="https://robohash.org/7.png"  alt="7" />
+            <img src="~/lib/img/purse-3@2x.png"  alt="8" />
+            <img src="~/lib/img/purse-3@2x.png"  alt="9" />
+            <img src="~/lib/img/purse-3@2x.png"  alt="10" />
+            <img src="~/lib/img/purse-3@2x.png"  alt="11" />
+            <img src="~/lib/img/purse-3@2x.png"  alt="12" />
+        </div>*@
+        
+
+
+    <div class="group-573">
+        <div class="group-525 side">
+
+            <div class="packed-with-features poppins-medium-black-42px">
+                Packed With Features For Your Home<br />Service Business
+            </div>
+            <div class="frame-17 carousel-inner">
+                <div class="overlap-group-1 pagination">
+                    <img class="purse-1" src="~/lib/img/purse-1@2x.png" />
+                    <div class="job-profitability poppins-medium-black-34px">Job Profitability</div>
+                    <div class="estimates-invoices poppins-normal-black-18px">
+                        Estimates &amp; Invoices<br />Contracts &amp; Signatures<br />Customer Management<br />Email &amp; SMS
+                        Communications
                     </div>
                 </div>
+                <div class="overlap-group1-1 pagination">
+                    <img class="purse-2" src="~/lib/img/purse-2@2x.png" />
+                    <div class="customer-management poppins-medium-black-34px">Customer<br />Management</div>
+                    <div class="scheduling-dispatc poppins-normal-black-18px">
+                        Scheduling &amp; Dispatch<br />Route Planning<br />Job Profitability<br />Mobile &amp; Email
+                        Payments<br />Square Integration
+                    </div>
+                </div>
+                <div class="overlap-group2-1 pagination">
+                    <img class="purse-3" src="~/lib/img/purse-3@2x.png" />
+                    <div class="online-booking poppins-medium-black-34px">Online Booking</div>
+                    <div class="file-photo-attachmen poppins-normal-black-18px">
+                        File/Photo Attachments<br />Online Booking<br />Notifications &amp; Reminders<br />Custom Forms &amp;
+                        Fields
+                    </div>
+                </div>
+
+                <div class="overlap-group-1 pagination">
+                    @*<img class="purse-1" src="~/lib/img/purse-1@2x.png" />*@
+                    <div class="job-profitability poppins-medium-black-34px"> Profitability</div>
+                    <div class="estimates-invoices poppins-normal-black-18px">
+                        Estimates &amp; Invoices<br />Contracts &amp; Signatures<br />Customer Management<br />Email &amp; SMS
+                        Communications
+                    </div>
+                </div>
+                <div class="overlap-group1-1 pagination">
+                    <img class="purse-2" src="~/lib/img/purse-2@2x.png" />
+                    <div class="customer-management poppins-medium-black-34px">Customer<br />Management</div>
+                    <div class="scheduling-dispatc poppins-normal-black-18px">
+                        Scheduling &amp; Dispatch<br />Route Planning<br />Job Profitability<br />Mobile &amp; Email
+                        Payments<br />Square Integration
+                    </div>
+                </div>
+                <div class="overlap-group2-1 pagination">
+                    <img class="purse-3" src="~/lib/img/purse-3@2x.png" />
+                    <div class="online-booking poppins-medium-black-34px"> Booking</div>
+                    <div class="file-photo-attachmen poppins-normal-black-18px">
+                        File/Photo Attachments<br />Online Booking<br />Notifications &amp; Reminders<br />Custom Forms &amp;
+                        Fields
+                    </div>
+                </div>
+
             </div>
-            <div class="overlap-group4"><img class="line-44" src="~/lib/img/line-44@2x.svg" /></div>
+
         </div>
+        <a href="#" class="prev"><img class="arrow-11" src="/lib/img/arrow-right-4@2x.svg"></a>
+        <a href="#" class="next"><img class="arrow-22" src="/lib/img/arrow-right-3@2x.svg"></a>
+        <div class="overlap-group4"><img class="line-44" src="~/lib/img/line-44@2x.svg" /></div>
+
+    </div>
         <div class="why-uleadz-2 poppins-medium-black-48px">Why Uleadz?</div>
         <div class="workflow-management poppins-normal-black-18px">
             Workflow Management (WFM) has significantly evolved in the past few years, and today it encompasses not
@@ -81,9 +126,11 @@
             real-time<br />status update, etc. WFM software allows businesses to impart the best field service solutions
             to their clients that<br />work seamlessly with their current back-office solution right from the beginning.
         </div>
-        <div class="frame-17-1">
-            <div class="start-now valign-text-middle poppins-medium-white-16px">Start Now</div>
-        </div>
+        <a href="#">
+            <div class="frame-17-1">
+                <div class="start-now valign-text-middle poppins-medium-white-16px">Start Now</div>
+            </div>
+        </a>
         <div class="overlap-group-container">
             <div class="overlap-group8">
                 <div class="ellipse-28"></div>
@@ -185,9 +232,11 @@
                     without hefty price tags. Uleadz offers field<br />service management for small businesses and helps<br />your
                     business grow and keeps you in the competition<br />through seamless WFM software.
                 </p>
-                <div class="frame-16-1">
-                    <div class="learn-more valign-text-middle poppins-medium-white-16px">Learn More</div>
-                </div>
+                <a href="#">
+                    <div class="frame-16-1">
+                        <div class="learn-more valign-text-middle poppins-medium-white-16px">Learn More</div>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="overlap-group12">
@@ -259,7 +308,7 @@
                     </div>
                     <div class="overlap-group-3">
                         <img class="rectangle-258-1" src="~/lib/img/rectangle-258-1@2x.png" />
-                        <img class="rectangle-258" src="~/lib/img/rectangle-258-2@2x.png" />
+                        @*<img class="rectangle-258" src="~/lib/img/rectangle-258-2@2x.png" />*@
                         <img class="rectangle-259" src="~/lib/img/rectangle-259-1@2x.png" />
                         <img class="rectangle-260" src="~/lib/img/rectangle-260-1@2x.png" />
                     </div>
