--- a/Uleadz.StaticWeb/Pages/index.cshtml
+++ b/Uleadz.StaticWeb/Pages/index.cshtml
@@ -1,8 +1,10 @@
 @page
 
 @section styles{
+
     <link rel="stylesheet" type="text/css" href="~/css/app/homepage.css" />
     <link rel="stylesheet" type="text/css" href="~/css/app/homepage-mobile-op-2.css" />
+
 }
 <body>
     @if (Request.IsMobileBrowser())
@@ -14,4 +16,10 @@
     {
         <partial name="_HomePage" />
     }
+
 </body>
+@section Scripts{
+    @*<script src="/app/js/aaa.js"></script>*@
+   
+}
+
