--- a/Uleadz.StaticWeb/wwwroot/css/app/why-uleadz-mobile.css
+++ b/Uleadz.StaticWeb/wwwroot/css/app/why-uleadz-mobile.css
@@ -930,6 +930,7 @@
   text-align: center;
   white-space: nowrap;
   width: 57.06px;
+  padding-bottom:13px;
 }
 
 .why-uleadz-mobile .overlap-group22 {
@@ -2066,7 +2067,7 @@
 
 .why-uleadz-mobile .line-25 {
   height: 12px;
-  left: 6px;
+  left: 5px;
   position: absolute;
   top: 0;
   width: 2px;
