--- a/Uleadz.StaticWeb/wwwroot/css/app/homepage.css
+++ b/Uleadz.StaticWeb/wwwroot/css/app/homepage.css
@@ -16,12 +16,7 @@
     height: 1863px;
     margin-top: -174px;
     position: relative;
-    width: 1845px;
-}
-
-.homepage .overlap-group7 {
-  height: 1863px;
-  left: 0;
+    width: 1845px;f
   position: absolute;
   top: 0;
   width: 1845px;
@@ -101,10 +96,11 @@
 }
 
 .homepage .download-for-i-os {
-  letter-spacing: -0.64px;
-  margin-left: 10px;
-  min-height: 24px;
-  min-width: 128px;
+    letter-spacing: -0.64px;
+    margin-left: 10px;
+    min-height: 24px;
+    min-width: 128px;
+    margin-top: -4px;
 }
 
     .homepage .overlap-group {
@@ -128,10 +124,11 @@
 }
 
 .homepage .download-for-android {
-  letter-spacing: -0.64px;
-  margin-left: 9px;
-  min-height: 24px;
-  min-width: 162px;
+    letter-spacing: -0.64px;
+    margin-left: 9px;
+    min-height: 24px;
+    min-width: 162px;
+    margin-top: -4px;
 }
 
 .homepage .coins2-1 {
@@ -418,7 +415,7 @@
       z-index: 2;
 }
     .menu-nav a {
-        display: contents;
+        display: block;
         text-decoration: none;
     }
 .image-1 {
@@ -438,6 +435,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #551a8b !important;
+}
+.active{
+    border-bottom:1px solid purple !important;
+
+/*    background-color:red !important;*/
 }
 
 .homepage .overlap-group6 {
